--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,6 +8,42 @@ on:
 
 jobs:
 
+  windows-build:
+    runs-on: [self-hosted, Windows, x86_64]
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23'
+
+    - name: Build
+      run: go build -v ./...
+
+    - name: Test
+      run: go test -v ./...
+
+  mac-build:
+    runs-on: "macos-13"
+    env:
+      ARCH: "x86_64"
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23'
+
+    - name: Build
+      run: go build -v ./...
+
+    - name: Test
+      run: go test -v ./... 
+
+  
+
   build:
     runs-on: ubuntu-latest
     steps:
