--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ on:
 jobs:
 
   windows-build:
-    runs-on: [self-hosted, Windows, x86_64]
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
 
