--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,107 +1,40 @@
-name: Go Build
+name: Go Build and Test
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
+  build-and-test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        go-version: ['1.23', '1.21']
+        os: ['ubuntu-latest', 'windows-latest', 'macos-13']
+        include:
+          - go-version: '1.23'
+            os: 'ubuntu-latest'
+          - go-version: '1.23'
+            os: 'windows-latest'
+          - go-version: '1.23'
+            os: 'macos-13'
+          - go-version: '1.21'
+            os: 'ubuntu-latest'
+          - go-version: '1.21'
+            os: 'windows-latest'
+          - go-version: '1.21'
+            os: 'macos-13'
 
-  windows-build-v1-23:
-    runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
-
-  mac-build-v1-23:
-    runs-on: "macos-13"
-    env:
-      ARCH: "x86_64"
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.23'
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./... 
-
-  linux-build-v1-23:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.23'
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
-  
-
-  windows-build-v1-19:
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.19'
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
-
-  mac-build-v1-19:
-    runs-on: "macos-13"
-    env:
-      ARCH: "x86_64"
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.19'
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./... 
-
-  linux-build-v1-19:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.19'
+        go-version: ${{ matrix.go-version }}
 
     - name: Build
       run: go build -v ./...
