--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        go-version: ['1.23', '1.21']
+        go-version: ['1.23', '1.21', '1.22']
         os: ['ubuntu-latest', 'windows-latest', 'macos-13']
         include:
           - go-version: '1.23'
@@ -26,6 +26,20 @@ jobs:
             os: 'windows-latest'
           - go-version: '1.21'
             os: 'macos-13'
+          - go-version: '1.21'
+            os: 'ubuntu-latest'
+          - go-version: '1.21'
+            os: 'windows-latest'
+          - go-version: '1.21'
+            os: 'macos-13'
+          - go-version: '1.22'
+            os: 'ubuntu-latest'
+          - go-version: '1.22'
+            os: 'windows-latest'
+          - go-version: '1.22'
+            os: 'macos-13'
+
+
 
     steps:
     - name: Checkout code
